# jin

./: .buildconfig  .gitignore  CMakeLists.txt  Jin.cpp  Jin.h  Jin.pro  Main.cpp  MainWindow.cpp  MainWindow.hpp  Makefile  README.md  TODO.md  moc_MainWindow.cpp
etc/assets/: default.css
etc/config/: jin.cfg  jin.conf
etc/glades/: Popup.glade  Settings.glade
include/: Common.h  Common.hpp  Config.h  ExampleWindow.h  FormWindow.hpp  MainWindow.hpp  SettingsWindow.hpp  TFile.h  Utils.h
src/: CMakeLists.txt  Config.cxx  ExampleWindow.cxx  FormWindow.cxx  MainWindow.cxx  SettingsWindow.cxx  TFile.cxx  Utils.cxx  main.c  main.cxx
themes/default/: theme.qss
